# kuberalocal

test/backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
test/backend/cli/: seed.py  tenant_admin.py
test/backend/contracts/commands/: contract.py  tag.py
test/backend/contracts/models/: contract.py  tag.py
test/backend/contracts/queries/: contract.py  tag.py
test/backend/contracts/routers/: contract.py  tag.py
test/backend/contracts/schema/: tag.py
test/backend/contracts/schemas/: contract.py  tag.py
test/backend/core/: audit.py  auditbase.py  base_models.py  database.py  health.py  migrations.py  shared_models.py  shared_services.py  tenant_db.py
test/backend/sessions/: deps.py  middleware.py  queries.py  router.py  service.py
test/backend/src/backend/: main.py
test/backend/src/backend/auth/: __init__.py  commands.py  deps.py  jwt_auth.py  queries.py  router.py  schemas.py
test/backend/src/backend/cli/: seed.py
test/backend/src/backend/contracts/: __init__.py  commands.py  models.py  queries.py  routers.py  schemas.py
test/backend/src/backend/core/: config.py  core_common_base.py  deps.py  middleware.py  migrations.py
test/backend/src/backend/sessions/: __init__.py  commands.py  models.py  schemas.py
test/backend/src/backend/tenants/: __init__.py  middleware.py  queries.py  router.py  schemas.py
test/backend/tenants/: commands.py  deps.py  models.py
test/bruno-collection/kubera/: README.md  bruno.json  collection.bru
test/bruno-collection/kubera/Auth/: Get-Current-User.bru  Login.bru
test/bruno-collection/kubera/Contracts/: Create-Contract.bru  Delete-Contract.bru  Get-Contract.bru  List Contracts.bru  List-Contracts.bru  Search-Contracts.bru  Update-Contract.bru
test/bruno-collection/kubera/Health/: Health-Check.bru
test/bruno-collection/kubera/Tags/: Create Tags.bru  Delete Tags.bru  Get Tags.bru  List Tags.bru  Update Tags.bru
test/bruno-collection/kubera/Tenants/: List-Tenants.bru
test/bruno-collection/kubera/Vendors/: Create-Vendor.bru  Delete-Vendor.bru  Get-Vendor.bru  List-Vendors.bru  Update-Vendor.bru
test/bruno-collection/kubera/environments/: local.bru
test/frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
test/frontend/src/: App.tsx  index.css  main.tsx
test/frontend/src/api/: client.ts  contracts.ts  items.ts  vendors.ts
test/frontend/src/components/: ContractDashboard.tsx  Dashboard.tsx  DashboardLayout.tsx  ProtectedRoute.tsx  SimpleLogin.tsx  TenantSettings.tsx  VendorDashboard.tsx  VendorDashboardContent.tsx
test/frontend/src/hooks/: useAuth.ts  useContracts.ts  useItems.ts  useTenant.ts  useTenantUsers.ts  useVendors.ts
test/frontend/src/utils/: logger.ts
